tests/mut_inv_pair_covariant_error.test
type Box[+T] = {v: T};
let x: Box[int <- str] = Box {v=1};
####
SyntaxError: ty1 <- ty2 syntax can only be used with invariant parameters.
type Box[+T] = {v: T};
let x: Box[int <- str] = Box {v=1};
                  ^~~
